Create the download directory if it doesn't exist before publishing.

OfflinePages are now saved to a public directory "/sdcard/Download/".
However, the saving sometimes fails when the directory doesn't exist.
This change checks for the existence of the directory, and creates
it before the publish step.

Bug: 869182

Change-Id: I3e0105c5ddb2df7a5fa9b57a5bf3ba7478af3b09
Reviewed-on: https://chromium-review.googlesource.com/1150406
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Reviewed-by: Dmitry Titov <dimich@chromium.org>
Reviewed-by: Yafei Duan <romax@chromium.org>
Commit-Queue: Peter Williamson <petewil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579638}
Former-commit-id: 01f42f90cbe9fcf2b958ff4178e66ae969113194